--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "https://github.com/gobixm/abyss.git"
   },
   "dependencies": {
-    "@types/pino": "^4.7.1",
     "del": "^3.0.0",
+    "encoding-down": "^5.0.0",
     "formidable": "^1.2.1",
     "koa": "^2.5.1",
     "koa-better-body": "^3.0.4",
@@ -30,6 +30,7 @@
     "@types/koa": "^2.0.45",
     "@types/koa-router": "^7.0.28",
     "@types/node": "^10.0.4",
+    "@types/pino": "^4.7.1",
     "nodemon": "^1.17.4",
     "npm-run-all": "^4.1.3",
     "ts-loader": "^4.2.0",
