--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "watch:build": "webpack --watch --mode development",
     "watch:server": "nodemon \"./dist/bundle.js\" --watch \"./dist\"",
-    "start": "npm-run-all --parallel watch:server watch:build"
+    "start": "npm-run-all --parallel watch:server watch:build",
+    "test": "jest"
   },
   "author": "kirill.ivanov<gobixm@gmail.com>",
   "license": "MIT",
@@ -27,16 +28,33 @@
   "devDependencies": {
     "@types/del": "^3.0.1",
     "@types/formidable": "^1.0.31",
+    "@types/jest": "^22.2.3",
     "@types/koa": "^2.0.45",
     "@types/koa-router": "^7.0.28",
     "@types/node": "^10.0.4",
     "@types/pino": "^4.7.1",
+    "jest": "^22.4.3",
     "nodemon": "^1.17.4",
     "npm-run-all": "^4.1.3",
+    "ts-jest": "^22.4.6",
     "ts-loader": "^4.2.0",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3"
+  },
+  "jest": {
+    "transform": {
+      ".ts": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "collectCoverage": true,
+    "coverageReporters": [
+      "html"
+    ]
   }
 }
