--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/gobixm/abyss.git"
   },
   "dependencies": {
+    "@koa/cors": "2",
     "del": "^3.0.0",
     "encoding-down": "^5.0.0",
     "formidable": "^1.2.1",
